--- a/exp_script/experiment.html
+++ b/exp_script/experiment.html
@@ -46,9 +46,11 @@
         type: jsPsychHtmlKeyboardResponse,
         stimulus: `
           <div id='instruction_pg' class='instruction'>
-            <p style="font-size: 24pt"><strong>Experiment Instructions</strong></p>
-
-            <p>Press any key to continue to the scenarios.</p>
+            <h3 style="font-size: 24pt"><strong>Experiment Instructions</strong></h3>
+            <p>In this study, you will read scenarios and answer questions about moral decisions. You will be presented with a scenario involving two individuals, Justin and Nate, who each find a wallet with money in a parking lot. You will be asked to answer questions about their decision-making process.</p>
+            <p>After reading the scenario, you will be asked to answer a series of questions about each individual's decision-making process. Please answer the questions based on the information provided in the scenario.</p>
+            <p>There are no right or wrong answers, so please answer honestly based on your own opinions and beliefs.</p>
+            <p><strong>Press any key to continue to the scenarios.<strong></p>
           </div>
         `,
         on_finish: () => console.log("Instructions page completed")
@@ -83,7 +85,7 @@
                     </div>
                   </div>`
             }
-            <p>Press any key to continue to the questionnaires.</p>
+            <p><strong>Press any key to continue to the questionnaires.<strong></p>
           </div>
         `,
         on_finish: () => console.log("Trial scenario for", condition, "condition completed")
