--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       };
 
       // Save data configuration
-      const filename = `${subject_id}.json`;
+      const filename = `${subject_id}.csv`;
       const save_data = {
         type: jsPsychPipe,
         action: "save",
