--- a/index.html
+++ b/index.html
@@ -88,18 +88,16 @@
         stimulus: "<p>Thank you for participating!</p><p>Press any key to finish.</p>"
       };
 
+      // Add custom properties to jsPsych data
+      jsPsych.data.addProperties(responseData);
+      
       // Save data configuration
       const save_data = {
         type: jsPsychPipe,
         action: "save",
         experiment_id: "fWVZFOaYbb59", // Replace with your actual experiment ID
         filename: filename,
-        data_string: () => JSON.stringify(responseData),
-        on_finish: () => {
-          const csvData = jsPsych.data.get().csv();
-          console.log(csvData); // This logs the CSV data to the console
-          return csvData;       // This returns the CSV data after saving
-        }
+        data_string: () => jsPsych.data.get().csv() // Save as CSV on OSF, including responseData
       };
 
       // Experiment timeline
