--- a/index.html
+++ b/index.html
@@ -6,26 +6,28 @@
     <script src="https://unpkg.com/@jspsych/plugin-survey-likert@2.0.0"></script>
     <script src="https://unpkg.com/@jspsych-contrib/plugin-pipe"></script>
 
-    <link
-      href="https://unpkg.com/jspsych@8.0.3/css/jspsych.css"
-      rel="stylesheet"
-      type="text/css"
-    />
+    <link href="https://unpkg.com/jspsych@8.0.3/css/jspsych.css" rel="stylesheet" type="text/css" />
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body></body>
 
   <script>
-    document.addEventListener("DOMContentLoaded", function () {
+    document.addEventListener("DOMContentLoaded", function() {
       // Initialize jsPsych
       const jsPsych = initJsPsych();
 
-      // Randomly assign participant to a condition and question order, and log them
-      const condition = Math.random() < 0.5 ? "moral" : "immoral"; // Assign 1 for moral, 0 for immoral
-      const questionOrder = Math.random() < 0.5 ? "Justin" : "Nate"; // Assign 1 for Justin first, 0 for Nate first
-      console.log("Assigned condition:", condition);
-      console.log("Assigned question order:", questionOrder);
+      // Random assignment of condition and scenario order
+      const condition = Math.random() < 0.5 ? 1 : 0; // 1 for moral, 0 for immoral
+      const scenario_order = Math.random() < 0.5 ? 1 : 0; // 1 for Justin first, 0 for Nate first
+      const subject_id = jsPsych.randomization.randomID(10);
+
+      // Add properties to every row of data
+      jsPsych.data.addProperties({
+        condition: condition,
+        scenario_order: scenario_order,
+        participant_id: subject_id
+      });
 
       // Consent page
       const consent = {
@@ -44,7 +46,7 @@
             <p><strong>Press any key to confirm consent and continue.<strong></p>
           </div>
         `,
-        on_finish: () => console.log("Consent page completed"),
+        on_finish: () => console.log("Consent page completed")
       };
 
       // Instructions page
@@ -59,7 +61,7 @@
             <p><strong>Press any key to continue to the scenarios.<strong></p>
           </div>
         `,
-        on_finish: () => console.log("Instructions page completed"),
+        on_finish: () => console.log("Instructions page completed")
       };
 
       // Trial (scenario) based on condition
@@ -68,12 +70,11 @@
         stimulus: `
           <div id='trial'>
             <p style="font-size: 17pt"><strong>Please read the following scenario carefully.</strong></p>
-
             <div id='general' class='scenario'>
               <p>Justin and Nate were walking to separate cars in the parking lot of Andronico's, a local grocery store, when they each spotted a different lost wallet next to their cars. Upon picking up the wallet and looking inside, each found several hundred dollars in cash. Each man considered whether he should return the wallet and money to the Customer Service desk at Andronico's or pocket the money and drive away.</p>
             </div>
             ${
-              condition === "moral"
+              condition === 1
                 ? `<div id='moral_trial'>
                     <div id='m_justin' class='moral_cond'>
                       <p>Justin saw his decision as an easy one and was able to decide quickly. He did not steal the money and instead left the wallet with Customer Service.</p>
@@ -94,8 +95,7 @@
             <p><strong>Press any key to continue to the questionnaires.<strong></p>
           </div>
         `,
-        on_finish: () =>
-          console.log("Trial scenario for", condition, "condition completed"),
+        on_finish: () => console.log("Trial scenario for", condition === 1 ? "moral" : "immoral", "condition completed")
       };
 
       // Define the template questions with [name] as a placeholder
@@ -109,67 +109,52 @@
         "How conflicted do you think [name] felt in making the decision? (1 = very conflicted, 7 = not at all conflicted)",
         "Based on the information provided, do you think [name] had many reservations about the decision? (1 = none at all, 7 = a whole lot)",
         "Do you think [name] was calm and emotionally contained while making the decision? (1 = not at all, 7 = entirely so)",
-        "To what extent do you think [name] became upset and acted without thinking? (1 = not at all, 7 = entirely so)",
+        "To what extent do you think [name] became upset and acted without thinking? (1 = not at all, 7 = entirely so)"
       ];
 
       // Function to create a questionnaire for a person with consistent Likert scale labels
-      function createQuestionnaire(name, condition) {
+      function createQuestionnaire(name, condition, is_first) {
         const labels = ["1", "2", "3", "4", "5", "6", "7"]; // Uniform labels for all questions
 
         // Map each question template, replacing [name] with the actual name
-        const questions = questionTemplates.map((prompt) => ({
-          prompt: `<div class="question-container">${prompt.replace(
-            /\[name\]/g,
-            name
-          )}</div>`,
+        const questions = questionTemplates.map(prompt => ({
+          prompt: `<div class="question-container">${prompt.replace(/$begin:math:display$name$end:math:display$/g, name)}</div>`,
           labels: labels,
-          required: true,
+          required: true
         }));
 
         // Customize preamble based on the name and condition
-        const preamble =
-          condition === "moral"
-            ? `<div id="m_${name.toLowerCase()}" class="moral_cond"><p>${name} saw his decision as ${
-                name === "Justin"
-                  ? "an easy one and decided quickly, opting to leave the wallet with Customer Service."
-                  : "a difficult one, deliberating for a while before deciding to leave the wallet with Customer Service."
-              }</p></div>`
-            : `<div id="im_${name.toLowerCase()}" class="immoral_cond"><p>${name} saw his decision as ${
-                name === "Justin"
-                  ? "an easy one, quickly deciding to pocket the money and drive off."
-                  : "a difficult one, but after some thought, he also chose to pocket the money and drive off."
-              }</p></div>`;
+        const preamble = condition === 1
+          ? `<div id="m_${name.toLowerCase()}" class="moral_cond"><p>${name} decided to leave the wallet with Customer Service.</p></div>`
+          : `<div id="im_${name.toLowerCase()}" class="immoral_cond"><p>${name} decided to keep the money and drive off.</p></div>`;
 
-        // Return the questionnaire object with the consistent scale labels
         return {
           type: jsPsychSurveyLikert,
           questions: questions,
           preamble: preamble,
-          on_finish: (data) =>
-            console.log(`${name}'s questionnaire responses:`, data.response),
+          on_finish: (data) => {
+            data.scenario = name; // Logs if the response is for Justin or Nate
+            data.is_first = is_first ? 1 : 0; // Logs if this questionnaire was presented first
+            console.log(`${name}'s questionnaire responses recorded.`, data.response);
+          }
         };
       }
 
-      // Create questionnaire objects for Justin and Nate
-      const justin_questions = createQuestionnaire("Justin", condition);
-      const nate_questions = createQuestionnaire("Nate", condition);
-
-      // Randomize the order of Justin's and Nate's questions
-      const randomized_questions = jsPsych.randomization.shuffle([
-        justin_questions,
-        nate_questions,
-      ]);
+      // Create questionnaire objects for Justin and Nate based on scenario order
+      const justin_first = scenario_order === 1;
+      const justin_questions = createQuestionnaire("Justin", condition, justin_first);
+      const nate_questions = createQuestionnaire("Nate", condition, !justin_first);
+      
+      const randomized_questions = justin_first ? [justin_questions, nate_questions] : [nate_questions, justin_questions];
 
       // End message
       const end_message = {
         type: jsPsychHtmlKeyboardResponse,
-        stimulus:
-          "<p>Thank you for participating in the study!</p><p>Press any key to finish.</p>",
-        on_finish: () => console.log("End of experiment"),
+        stimulus: "<p>Thank you for participating in the study!</p><p>Press any key to finish.</p>",
+        on_finish: () => console.log("End of experiment")
       };
 
       // Create the unique filename using a subject ID
-      const subject_id = jsPsych.randomization.randomID(10);
       const filename = `${subject_id}.csv`;
 
       // Save data configuration
@@ -178,32 +163,16 @@
         action: "save",
         experiment_id: "fWVZFOaYbb59", // Replace with your actual experiment ID
         filename: filename,
-
-        data_string: () => {
-          // Add condition and questionOrder variables to each trial's data
-          jsPsych.data
-            .get()
-            .addToAll({
-              condition: condition === "moral" ? 1 : 0,
-              question_order: questionOrder === "Justin" ? 1 : 0,
-            });
-          return jsPsych.data.get().csv();
-        },
+        data_string: () => jsPsych.data.get().csv()
       };
 
       // Timeline for the experiment
-      const timeline = [
-        consent,
-        instructions,
-        trial_scenario,
-        ...randomized_questions,
-        end_message,
-        save_data,
-      ];
+      const timeline = [consent, instructions, trial_scenario, ...randomized_questions, end_message, save_data];
 
       // Run the experiment
       console.log("Starting experiment with timeline:", timeline);
       jsPsych.run(timeline);
+
     });
   </script>
 </html>
