--- a/index.html
+++ b/index.html
@@ -209,9 +209,10 @@
                     type: jsPsychHtmlButtonResponse,
                     stimulus: `
                         <div style="max-width: 600px; text-align: center;">
-                            <p style="font-size: 20pt; margin-bottom: 20px;">
+                            <p style="font-size: 22pt; margin-bottom: 20px;">
                                 <b>Thank you so much for participating in this study!</b>
                             </p>
+                            <p style="font-size: 22pt;"> Please save this code, <b>C1LKM3BT</b>, to validate your participation and receive payment.</p>
                             <p style="font-size: 20pt; margin-bottom: 40px;">
                                 <b>Please click the Submit button to complete the study. Wait until you are redirected to Prolific before closing this window.</b>
                             </p>
@@ -222,7 +223,7 @@
                     response_ends_trial: true,
                     on_finish: () => {
                         console.log("Redirecting to Prolific...");
-                        window.location.href = "https://www.prolific.co/"; // Replace with your actual Prolific URL
+                        window.location.href = "https://app.prolific.com/submissions/complete?cc=C1LKM3BT"; // Replace with your actual Prolific URL
                     },
                 },
             ]);
