Made the questions required

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             name
           )}</div>`,
           labels: labels,
-          required: false,
+          required: true,
         }));
 
         // Customize preamble based on the name and condition
