--- a/index.html
+++ b/index.html
@@ -101,13 +101,42 @@
       };
 
 
-    
+      // Attention check questions
+      const attention_check = [
+        {
+          type: jsPsychSurveyLikert,
+          questions: [
+            {
+              prompt: "What are the names of the two individuals in the scenario?",
+              options: ["Simon and Nick", "Justin and Nate", "Tom and Rob", "John and Mike", "Jack and Bob", "Jim and Leon", "Robert and James"], 
+              required: true,
+            },
+          ],
+          on_finish: (data) => {
+            console.log("Attention check question 1 answered:", data.response.Q0);
+          },
+        },
+        {
+          type: jsPsychSurveyLikert,
+          questions: [
+            {
+              prompt: "What do Justin and Nate find?",
+              options: ["A smartphone", "A motorbike", "A scooter", "A wallet", "A bracelet", "A watch"],
+              required: true,
+            },
+          ],
+          on_finish: (data) => {
+            console.log("Attention check question 2 answered:", data.response.Q0);
+          },
+        }
+      ];
+
 
       // Define the template questions with [name] as a placeholder
       const questionTemplates = [
         "Did [name] make his decision quickly or slowly? (1 = particularly slowly, 7 = particularly quickly)",
         "Regardless of [name]'s decision, does it sound like [name] has underlying moral principles that are good, bad, or somewhere in between? (1 = completely bad, 4 = mixed, 7 = completely good)",
-        "Regardless of [name]'s decision, do you think [name] has moral standards that are good, bad, or somewhere in between? (1 = completely bad, 4 = mixed, 7 = completely good)",
+        "Regardless of [name]'s decision, do you think [name] has moral standards that are good, bad, or somewhere in between? (1 = completely bad, 4 = mixed, 7 = completely good)", 
         "Regardless of [name]'s decision, do you think [name] possesses the moral knowledge and principles necessary to do 'the right thing'? (1 = not at all, 4 = somewhat, 7 = completely)",
         "Would you say [name] was quite certain in his decision, or did [name] have hesitations about his decision? (1 = completely certain, 7 = considerable hesitations)",
         "How close do you think [name] was to choosing the alternate course of action? (1 = very close to, 7 = not close at all)",
@@ -171,7 +200,11 @@
       const randomized_questions = jsPsych.randomization.shuffle([
         justin_questions,
         nate_questions,
-      ]);
+      ]); 
+
+      // Split the randomized questions into two halves 
+      const first_half = randomized_questions.slice(0, Math.floor(randomized_questions.length / 2));
+      const second_half = randomized_questions.slice(Math.floor(randomized_questions.length / 2));
 
 
       // End message
@@ -258,7 +291,9 @@
         consent,
         instructions,
         trial_scenario,
-        ...randomized_questions,
+        ...first_half,  // First half of randomized questions
+        ...attention_check,  // Attention check questions inserted here
+        ...second_half,  // Second half of randomized questions
         feedback,
         end_message,
         save_data,
