--- a/index.html
+++ b/index.html
@@ -100,36 +100,6 @@
           console.log("Trial scenario for", condition, "condition completed"),
       };
 
-      // Attention check questions
-      const attention_check = [
-        {
-          type: jsPsychSurveyLikert,
-          questions: [
-            {
-              prompt: "What are the names of the two individuals in the scenario?",
-              options: ["Simon and Nick", "Justin and Nate", "Tom and Rob", "John and Mike", "Jack and Bob", "Jim and Leon", "Robert and James"], 
-              required: true,
-            },
-          ],
-          on_finish: (data) => {
-            console.log("Attention check question 1 answered:", data.response.Q0);
-          },
-        },
-        {
-          type: jsPsychSurveyLikert,
-          questions: [
-            {
-              prompt: "What do Justin and Nate find?",
-              options: ["A smartphone", "A motorbike", "A scooter", "A wallet", "A bracelet", "A watch"],
-              required: true,
-            },
-          ],
-          on_finish: (data) => {
-            console.log("Attention check question 2 answered:", data.response.Q0);
-          },
-        }
-      ];
-
 
       // Define the template questions with [name] as a placeholder
       const questionTemplates = [
@@ -196,18 +166,11 @@
       const nate_questions = createQuestionnaire("Nate", condition);
 
       // Randomize the order of Justin's and Nate's questions
-      // const randomized_questions = jsPsych.randomization.shuffle([
-      //   justin_questions,
-      //   nate_questions,
-      // ]); 
+      const randomized_questions = jsPsych.randomization.shuffle([
+        justin_questions,
+        nate_questions,
+      ]); 
 
-      // Create arrays of just the questions (not the whole question objects)
-      const justin
-
-
-      // Split the randomized questions into two halves
-      const first_half = randomized_questions.slice(0, Math.floor(randomized_questions.length / 2));
-      const second_half = randomized_questions.slice(Math.floor(randomized_questions.length / 2));
 
       // End message
       const end_message = {
@@ -293,9 +256,7 @@
         consent,
         instructions,
         trial_scenario,
-        ...first_half,  // First half of randomized questions
-        ...attention_check,  // Attention check questions inserted here
-        ...second_half,  // Second half of randomized questions
+        ...randomized_questions,
         feedback,
         end_message,
         save_data,
