--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             name
           )}</div>`,
           labels: labels,
-          required: true,
+          required: false,
         }));
 
         // Customize preamble based on the name and condition
