--- a/index.html
+++ b/index.html
@@ -238,8 +238,7 @@
       const attention_check = {
         type: jsPsychSurveyHtmlForm,
         preamble: `
-            <h3>Attention Check Questions</h3>
-            <p>Answer based on the scenario you just read.</p>
+            <h3> Please answer based on the scenario you just read.</h3>
           
         `,
         html: `
